--- a/large_mt_to_single_sample_vcfs/docker/Dockerfile
+++ b/large_mt_to_single_sample_vcfs/docker/Dockerfile
@@ -32,6 +32,16 @@ RUN wget https://github.com/samtools/htslib/releases/download/${SAMTOOLS_VERSION
 	&& make install \
 	&& make clean
 
+
+# install gcloud
+ENV GCLOUD_SDK_VERISON="377.0.0"
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && /google-cloud-sdk/install.sh -q \
+    && /google-cloud-sdk/bin/gcloud components update --quiet
+
+ENV PATH=/google-cloud-sdk/bin:$PATH
+
 RUN python3 -m pip install --upgrade pip
 
 COPY vcf_header.txt /
