--- a/lirical/docker/Dockerfile
+++ b/lirical/docker/Dockerfile
@@ -18,3 +18,12 @@ RUN install_packages \
 RUN wget https://github.com/TheJacksonLaboratory/LIRICAL/releases/download/v1.3.4/LIRICAL.jar
 
 RUN python3 -m pip install --upgrade pip pandas
+
+# install gcloud
+ENV GCLOUD_SDK_VERISON="373.0.0"
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && /google-cloud-sdk/install.sh -q \
+    && /google-cloud-sdk/bin/gcloud components update --quiet
+
+ENV PATH=/google-cloud-sdk/bin:$PATH
